# trino-rust-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  response.rs
tests/: common.rs  integration_test.rs
